--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HQSY_HCZL/HQSY_HCZL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HQSY_HCZL/HQSY_HCZL.cshtml
@@ -147,7 +147,7 @@
                 <div class="divRight" id="div_tcys_right2">
                 </div>
             </div>
-            <div id="divGCSL" class="divFWCZ" style="z-index: 985;">
+            <div id="divGCSL" class="divFWCZ" style="z-index: 995;">
                 <div class="divLeft">
                     <span class="required">*</span>
                     <span class="spanFWCZ">跟车数量</span>
@@ -158,9 +158,9 @@
                         <span class="spanFontColor">辆</span>
                     </span>
                 </div>
-                <div id="divGCSLTip" class="Warn" style="z-index: 990; position: relative;"></div>
+                <div id="divGCSLTip" class="Warn" style="z-index: 995; position: relative;"></div>
             </div>
-            <div id="divHCZLGCPP" class="divFWCZ" style="z-index: 998">
+            <div id="divHCZLGCPP" class="divFWCZ" style="z-index: 994">
                 <div class="divLeft">
                     <span class="required">*</span>
                     <span class="spanFWCZ">跟车品牌</span>
@@ -186,7 +186,7 @@
                     </div>
                 </div>
             </div>
-            <div id="divGCYS" class="divFWCZ" style="z-index: 997">
+            <div id="divGCYS" class="divFWCZ" style="z-index: 993">
                 <div class="divLeft" style="margin-left: 101px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">跟车颜色</span>
@@ -194,14 +194,67 @@
                 <div class="divRight" id="div_gcys_right">
                 </div>
             </div>
-            <div id="divGCYS2" class="divFWCZ" style="z-index: 996">
+            <div id="divGCYS2" class="divFWCZ" style="z-index: 992">
                 <div class="divLeft" style="margin-left: 177px;">
                     <span class="spanFWCZ">&nbsp;</span>
                 </div>
                 <div class="divRight" id="div_gcys_right2">
                 </div>
             </div>
-            <div id="divFWQY" class="divFWCZ" style="z-index: 996">
+            <div id="divMFTGCH" class="divFWCZ">
+                <div class="divLeft" style="margin-left: 72px;">
+                    <span class="required">*</span>
+                    <span class="spanFWCZ">免费提供车花</span>
+                </div>
+                <div class="divRight">
+                    <div class="div_radio" id="div_mftgch_s">
+                        <img class="iFWCZ" id="img_mftgch_s" /><label class="labelFWCZ">是</label>
+                    </div>
+                    <div class="div_radio" id="div_mftgch_f">
+                        <img class="iFWCZ" id="img_mftgch_f" /><label class="labelFWCZ">否</label>
+                    </div>
+                </div>
+            </div>
+            <div id="divJNSJ" class="divFWCZ" style="z-index: 991;">
+                <div class="divLeft">
+                    <span class="required">*</span>
+                    <span class="spanFWCZ">价内时间</span>
+                </div>
+                <div class="divRight">
+                    <span id="spanJNSJ" class="spanFWLX SRK" style="display: inline-block; width: 150px;">
+                        <input class="inputLCFB spanFontColor" id="JNSJ" maxlength="9" column="JNSJ" type="text" style="width: 100px" />
+                        <span class="spanFontColor">小时</span>
+                    </span>
+                </div>
+                <div id="divJNSJTip" class="Warn" style="z-index: 991; position: relative;"></div>
+            </div>
+            <div id="divJNGLS" class="divFWCZ" style="z-index: 990;">
+                <div class="divLeft" style="margin-left: 86px;">
+                    <span class="required">*</span>
+                    <span class="spanFWCZ">价内公里数</span>
+                </div>
+                <div class="divRight">
+                    <span id="spanJNGLS" class="spanFWLX SRK" style="display: inline-block; width: 150px;">
+                        <input class="inputLCFB spanFontColor" id="JNGLS" maxlength="9" column="JNGLS" type="text" style="width: 100px" />
+                        <span class="spanFontColor">公里</span>
+                    </span>
+                </div>
+                <div id="divJNGLSTip" class="Warn" style="z-index: 990; position: relative;"></div>
+            </div>
+            <div id="divJG" class="divFWCZ" style="z-index: 989;">
+                <div class="divLeft" style="margin-left: 128px;">
+                    <span class="required">*</span>
+                    <span class="spanFWCZ">价格</span>
+                </div>
+                <div class="divRight">
+                    <span id="spanJG" class="spanFWLX SRK" style="display: inline-block; width: 150px;">
+                        <input class="inputLCFB spanFontColor" id="JG" maxlength="9" column="JG" type="text" style="width: 120px" />
+                        <span class="spanFontColor">元</span>
+                    </span>
+                </div>
+                <div id="divJGTip" class="Warn" style="z-index: 989; position: relative;"></div>
+            </div>
+            <div id="divFWQY" class="divFWCZ" style="z-index: 988">
                 <div class="divLeft">
                     <span class="required">*</span>
                     <span id="spanFWQY">服务区域</span>
@@ -215,7 +268,7 @@
                 <span class="spanSplit">特色描述</span>
                 <em class="emSplit"></em>
             </div>
-            <div id="divFYMS" class="divFWCZ" style="height: 253px; position: relative; z-index: 996;">
+            <div id="divFYMS" class="divFWCZ" style="height: 253px; position: relative; z-index: 987;">
                 <div class="divLeft" style="height: 170px; vertical-align: top;">
                     <span class="required" style="vertical-align: top">*</span>
                     <span id="spanFYMS" style="vertical-align: top">服务介绍</span>
