--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HQSY_HSLF/HQSY_HSLF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HQSY_HSLF/HQSY_HSLF.cshtml
@@ -108,7 +108,7 @@
                     </div>
                 </div>
             </div>
-            <div id="divHSLFFG" class="divFWCZ" style="z-index: 998">
+            <div id="divFG" class="divFWCZ" style="z-index: 998">
                 <div class="divLeft" style="margin-left: 128px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">风格</span>
@@ -144,18 +144,18 @@
                     </div>
                 </div>
             </div>
-            <div id="divSYSRS" class="divFWCZ" style="z-index: 996;">
+            <div id="divDGZQ" class="divFWCZ" style="z-index: 996;">
                 <div class="divLeft">
                     <span class="required">*</span>
                     <span class="spanFWCZ">订购周期</span>
                 </div>
                 <div class="divRight">
-                    <span id="spanSYSRS" class="spanFWLX SRK" style="display: inline-block; width: 150px;">
-                        <input class="inputLCFB spanFontColor" id="SYSRS" maxlength="9" column="SYSRS" type="text" style="width: 120px" />
+                    <span id="spanDGZQ" class="spanFWLX SRK" style="display: inline-block; width: 150px;">
+                        <input class="inputLCFB spanFontColor" id="DGZQ" maxlength="9" column="DGZQ" type="text" style="width: 120px" />
                         <span class="spanFontColor">天</span>
                     </span>
                 </div>
-                <div id="divSYSRSTip" class="Warn" style="z-index: 995; position: relative;"></div>
+                <div id="divDGZQTip" class="Warn" style="z-index: 995; position: relative;"></div>
             </div>
             <div id="divHSLFCZ" class="divFWCZ" style="z-index: 995;">
                 <div class="divLeft" style="margin-left: 128px;">
@@ -173,7 +173,7 @@
                     </div>
                 </div>
             </div>
-            <div id="divHSLFKS" class="divFWCZ" style="z-index: 994;">
+            <div id="divKS" class="divFWCZ" style="z-index: 994;">
                 <div class="divLeft" style="margin-left: 128px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">款式</span>
