--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_MYFZMR_FZXMXB/ES_MYFZMR_FZXMXB.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_MYFZMR_FZXMXB/ES_MYFZMR_FZXMXB.cshtml
@@ -106,7 +106,7 @@
                         </div>
                     </div>
                     <div id="divXLText" class="spanFWLXOut SRK">
-                        <div div="divXLSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divXLSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanXL" class="spanFWQK spanFontColor" style="margin-top: 0px;">请选择小类</span>
                             <div class="divFWQKArrow"></div>
                         </div>
