--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_QTES_ESSB/ES_QTES_ESSB.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_QTES_ESSB/ES_QTES_ESSB.cshtml
@@ -170,8 +170,8 @@
                     <span class="spanFWCZ">转让价格</span>
                 </div>
                 <div class="divRight">
-                    <span id="spanJG" class="spanFWLX SRK" style="display: inline-block;">
-                        <input class="inputLCFB spanFontColor" id="JG" maxlength="9" column="JG" type="text" style="width: 100px" />
+                    <span id="spanJG" class="spanFWLX SRK" style="display: inline-block; width: 150px;">
+                        <input class="inputLCFB spanFontColor" id="JG" maxlength="9" column="JG" type="text" style="width: 120px" />
                         <span class="spanFontColor">元</span>
                     </span>
                 </div>
