--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_SP/FC_SP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_SP/FC_SP.cshtml
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/Common/XZQ.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/FC/FC_SP.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/FC/FC_SPYZ.js")"></script>
-    
+
 </head>
 <body>
     <div>
@@ -88,8 +88,12 @@
                     <span class="spanFWCZ">分类</span>
                 </div>
                 <div class="divRight">
-                    <img class="iFWCZ" id="imgSPZS" /><label class="labelFWCZ">&nbsp;&nbsp;商铺租售&nbsp;&nbsp;</label>
-                    <img class="iFWCZ" id="imgSYZR" /><label class="labelFWCZ">&nbsp;&nbsp;生意转让</label>
+                    <div class="div_radio" id="div_fl_spzs">
+                        <img class="iFWCZ" id="img_fl_spzs" /><label class="labelFWCZ">商铺租售</label>
+                    </div>
+                    <div class="div_radio" id="div_fl_syzr">
+                        <img class="iFWCZ" id="img_fl_syzr" /><label class="labelFWCZ">生意转让</label>
+                    </div>
                 </div>
             </div>
             <div id="divGQ" class="divFWCZ">
@@ -98,8 +102,12 @@
                     <span class="spanFWCZ">供求</span>
                 </div>
                 <div class="divRight">
-                    <img class="iFWCZ" id="imgCZ" /><label class="labelFWCZ">&nbsp;&nbsp;出租&nbsp;&nbsp;</label>
-                    <img class="iFWCZ" id="imgCS" /><label class="labelFWCZ">&nbsp;&nbsp;出售</label>
+                    <div class="div_radio" id="div_gq_cz">
+                        <img class="iFWCZ" id="img_gq_cz" /><label class="labelFWCZ">出租</label>
+                    </div>
+                    <div class="div_radio" id="div_gq_cs">
+                        <img class="iFWCZ" id="img_gq_cs" /><label class="labelFWCZ">出售</label>
+                    </div>
                 </div>
             </div>
             <div id="divJBXX" class="divSplit" style="display: block; text-align: left">
