--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_DZF/FC_DZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_DZF/FC_DZF.cshtml
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/Common/XZQ.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/FC/FC_DZF.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/FC/FC_DZFYZ.js")"></script>
-    
+
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/jquery-ui-1.12.1.custom/jquery-ui.min.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/jquery-ui-1.12.1.custom/jquery.ui.datepicker-zh-CN.js")"></script>
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=134db1b9cf1f1f2b4427210932b34dcb"></script>
@@ -90,8 +90,12 @@
                     <span class="spanFWCZ">出租方式</span>
                 </div>
                 <div class="divRight">
-                    <img class="iFWCZ" id="imgDZF" /><label class="labelFWCZ">&nbsp;&nbsp;短租房&nbsp;&nbsp;</label>
-                    <img class="iFWCZ" id="imgRZF" /><label class="labelFWCZ">&nbsp;&nbsp;日租房</label>
+                    <div class="div_radio" id="div_czfs_dzf">
+                        <img class="iFWCZ" id="img_czfs_dzf" /><label class="labelFWCZ">短租房</label>
+                    </div>
+                    <div class="div_radio" id="div_czfs_rzf">
+                        <img class="iFWCZ" id="img_czfs_rzf" /><label class="labelFWCZ">日租房</label>
+                    </div>
                 </div>
             </div>
             <div id="divLX" class="divFWCZ" style="z-index: 999">
