--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_CKCFTDCW/FC_CKCFTDCW.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_CKCFTDCW/FC_CKCFTDCW.cshtml
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/Common/XZQ.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/FC/FC_CKCFTDCW.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/FC/FC_CKCFTDCWYZ.js")"></script>
-    
+
 </head>
 <body>
     <div>
@@ -88,8 +88,12 @@
                     <span class="spanFWCZ">供求</span>
                 </div>
                 <div class="divRight">
-                    <img class="iFWCZ" id="imgCZ" /><label class="labelFWCZ">&nbsp;&nbsp;出租&nbsp;&nbsp;</label>
-                    <img class="iFWCZ" id="imgCS" /><label class="labelFWCZ">&nbsp;&nbsp;出售</label>
+                    <div class="div_radio" id="div_gq_cz">
+                        <img class="iFWCZ" id="img_gq_cz" /><label class="labelFWCZ">出租</label>
+                    </div>
+                    <div class="div_radio" id="div_gq_cs">
+                        <img class="iFWCZ" id="img_gq_cs" /><label class="labelFWCZ">出售</label>
+                    </div>
                 </div>
             </div>
             <div id="divLX" class="divFWCZ" style="z-index: 999">
