--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_SJSM_ESSJ/ES_SJSM_ESSJ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_SJSM_ESSJ/ES_SJSM_ESSJ.cshtml
@@ -87,8 +87,12 @@
                     <span class="spanFWCZ">供求</span>
                 </div>
                 <div class="divRight">
-                    <img class="iFWCZ" id="imgSJZR" /><label class="labelFWCZ">&nbsp;&nbsp;商家转让</label>
-                    <img class="iFWCZ" id="imgSJHS" /><label class="labelFWCZ">&nbsp;&nbsp;商家回收&nbsp;&nbsp;</label>
+                    <div class="div_radio" id="div_gq_sjzr">
+                        <img class="iFWCZ" id="img_gq_sjzr" /><label class="labelFWCZ">商家转让</label>
+                    </div>
+                    <div class="div_radio" id="div_gq_sjhs">
+                        <img class="iFWCZ" id="img_gq_sjhs" /><label class="labelFWCZ">商家回收</label>
+                    </div>
                 </div>
             </div>
             <div id="divSJLB" class="divFWCZ" style="z-index: 999">
@@ -122,8 +126,12 @@
                     <span class="spanFWCZ">使用情况</span>
                 </div>
                 <div class="divRight">
-                    <img class="iFWCZ" id="imgSYG" /><label class="labelFWCZ">&nbsp;&nbsp;使用过</label>
-                    <img class="iFWCZ" id="imgQXWCF" /><label class="labelFWCZ">&nbsp;&nbsp;全新未拆封&nbsp;&nbsp;</label>
+                    <div class="div_radio" id="div_syqk_syg">
+                        <img class="iFWCZ" id="img_syqk_syg" /><label class="labelFWCZ">使用过</label>
+                    </div>
+                    <div class="div_radio" id="div_syqk_qxwcf">
+                        <img class="iFWCZ" id="img_syqk_qxwcf" /><label class="labelFWCZ">全新未拆封</label>
+                    </div>
                 </div>
             </div>
             <div id="divJG" class="divFWCZ" style="z-index: 994;">
