--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_JC/CL_JC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_JC/CL_JC.cshtml
@@ -173,9 +173,13 @@
                     <span class="spanFWCZ">是否定期4S保养</span>
                 </div>
                 <div class="divRight">
-                    <img class="iFWCZ" id="imgS" /><label class="labelFWCZ">&nbsp;&nbsp;是</label>
-                    <img class="iFWCZ" id="imgF" /><label class="labelFWCZ">&nbsp;&nbsp;否&nbsp;&nbsp;</label>
-                </div>
+                    <div class="div_radio" id="div_sfdqby_s">
+                        <img class="iFWCZ" id="img_sfdqby_s" /><label class="labelFWCZ">&nbsp;&nbsp;是</label>
+                    </div>
+                    <div class="div_radio" id="div_sfdqby_f">
+                        <img class="iFWCZ" id="img_sfdqby_f" /><label class="labelFWCZ">&nbsp;&nbsp;否&nbsp;&nbsp;</label>
+                    </div>
+                        </div>
             </div>
             <div id="divPZSZD" class="divFWCZ" style="z-index: 994;">
                 <div class="divLeft" style="margin-left: 87px;">
