--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_SJSM_PBDN/ES_SJSM_PBDN.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_SJSM_PBDN/ES_SJSM_PBDN.cshtml
@@ -87,8 +87,12 @@
                     <span class="spanFWCZ">供求</span>
                 </div>
                 <div class="divRight">
-                    <img class="iFWCZ" id="imgSJZR" /><label class="labelFWCZ">&nbsp;&nbsp;商家转让</label>
-                    <img class="iFWCZ" id="imgSJHS" /><label class="labelFWCZ">&nbsp;&nbsp;商家回收&nbsp;&nbsp;</label>
+                    <div class="div_radio" id="div_gq_sjzr">
+                        <img class="iFWCZ" id="img_gq_sjzr" /><label class="labelFWCZ">商家转让</label>
+                    </div>
+                    <div class="div_radio" id="div_gq_sjhs">
+                        <img class="iFWCZ" id="img_gq_sjhs" /><label class="labelFWCZ">商家回收</label>
+                    </div>
                 </div>
             </div>
             <div id="divPBLB" class="divFWCZ" style="z-index: 999">
@@ -107,7 +111,7 @@
                     </div>
                     <div id="divPBPPText" class="spanFWLXOut SRK" style="position: relative;">
                         <div id="divPBPPSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="PPID"/>
+                            <input type="hidden" id="PPID" />
                             <span id="spanPBPP" class="spanFWQK spanFontColor" style="margin-top: 0">请选择品牌</span>
                             <div class="divFWQKArrow"></div>
                         </div>
