--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_SJSM_SMCP/ES_SJSM_SMCP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_SJSM_SMCP/ES_SJSM_SMCP.cshtml
@@ -87,8 +87,12 @@
                     <span class="spanFWCZ">供求</span>
                 </div>
                 <div class="divRight">
-                    <img class="iFWCZ" id="imgSJZR" /><label class="labelFWCZ">&nbsp;&nbsp;商家转让</label>
-                    <img class="iFWCZ" id="imgSJHS" /><label class="labelFWCZ">&nbsp;&nbsp;商家回收&nbsp;&nbsp;</label>
+                    <div class="div_radio" id="div_gq_sjzr">
+                        <img class="iFWCZ" id="img_gq_sjzr" /><label class="labelFWCZ">商家转让</label>
+                    </div>
+                    <div class="div_radio" id="div_gq_sjhs">
+                        <img class="iFWCZ" id="img_gq_sjhs" /><label class="labelFWCZ">商家回收</label>
+                    </div>
                 </div>
             </div>
             <div id="divPBLB" class="divFWCZ" style="z-index: 999">
@@ -99,6 +103,7 @@
                 <div class="divRight">
                     <div id="divLBText" class="spanFWLXOut SRK" style="position: relative;">
                         <div id="divLBSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <input id="LBID" type="hidden" />
                             <span id="spanLB" class="spanFWQK spanFontColor" style="margin-top: 0">请选择类别</span>
                             <div class="divFWQKArrow"></div>
                         </div>
