--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_WHYL_YSPSCP/ES_WHYL_YSPSCP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_WHYL_YSPSCP/ES_WHYL_YSPSCP.cshtml
@@ -88,8 +88,12 @@
                     <span class="spanFWCZ">身份</span>
                 </div>
                 <div class="divRight">
-                    <img class="iFWCZ" id="imgGRZR" /><label class="labelFWCZ">&nbsp;&nbsp;个人转让</label>
-                    <img class="iFWCZ" id="imgSJZR" /><label class="labelFWCZ">&nbsp;&nbsp;商家转让&nbsp;&nbsp;</label>
+                    <div class="div_radio" id="div_sf_grzr">
+                        <img class="iFWCZ" id="img_sf_grzr" /><label class="labelFWCZ">个人转让</label>
+                    </div>
+                    <div class="div_radio" id="div_sf_sjzr">
+                        <img class="iFWCZ" id="img_sf_sjzr" /><label class="labelFWCZ">商家转让</label>
+                    </div>
                 </div>
             </div>
             <div id="divJDLB" class="divFWCZ" style="z-index: 999">
