--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_KC/CL_KC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_KC/CL_KC.cshtml
@@ -163,68 +163,76 @@
                     <span class="spanFWCZ">是否定期4S保养</span>
                 </div>
                 <div class="divRight">
-                    <img class="iFWCZ" id="imgS" /><label class="labelFWCZ">&nbsp;&nbsp;是</label>
-                    <img class="iFWCZ" id="imgF" /><label class="labelFWCZ">&nbsp;&nbsp;否&nbsp;&nbsp;</label>
-                </div>
-            </div>
-        <div id="divYWZDSG" class="divFWCZ">
-            <div class="divLeft" style="margin-left: 72px;">
-                <span class="required">*</span>
-                <span class="spanFWCZ">有无重大事故</span>
-            </div>
-            <div class="divRight">
-                <img class="iFWCZ" id="imgY"/><label class="labelFWCZ">&nbsp;&nbsp;有</label>
-                <img class="iFWCZ" id="imgW"/><label class="labelFWCZ">&nbsp;&nbsp;无&nbsp;&nbsp;</label>
-            </div>
-        </div>
-        <div id="divNJDQ" class="divFWCZ" style="z-index: 995;">
-            <div class="divLeft" style="margin-left: 101px;">
-                <span class="required">*</span>
-                <span class="spanFWCZ">年检到期</span>
-            </div>
-            <div class="divRight">
-                <div id="divNJDQNFText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                    <div id="divNJDQNFSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                        <span id="spanNJDQNF" class="spanFWQK spanFontColor" style="margin-top: 0">请选择到期年份</span>
-                        <div class="divFWQKArrow"></div>
+                    <div class="div_radio" id="div_sfdqby_s">
+                        <img class="iFWCZ" id="img_sfdqby_s" /><label class="labelFWCZ">是</label>
                     </div>
-                    <div id="divNJDQNF" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
-                </div>
-                <div id="divNJDQYFText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                    <div id="divNJDQYFSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                        <span id="spanNJDQYF" class="spanFWQK spanFontColor" style="margin-top: 0">请选择到期月份</span>
-                        <div class="divFWQKArrow"></div>
-                    </div>
-                    <div id="divNJDQYF" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                    <div class="div_radio" id="div_sfdqby_f">
+                        <img class="iFWCZ" id="img_sfdqby_f" /><label class="labelFWCZ">否</label>
                     </div>
                 </div>
             </div>
-        </div>
-        <div id="divJQXDQ" class="divFWCZ" style="z-index: 994;">
-            <div class="divLeft" style="margin-left: 86px;">
-                <span class="required">*</span>
-                <span class="spanFWCZ">交强险到期</span>
-            </div>
-            <div class="divRight">
-                <div id="divJQXDQNFText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                    <div id="divJQXDQNFSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                        <span id="spanJQXDQNF" class="spanFWQK spanFontColor" style="margin-top: 0">请选择到期年份</span>
-                        <div class="divFWQKArrow"></div>
-                    </div>
-                    <div id="divJQXDQNF" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
+            <div id="divYWZDSG" class="divFWCZ">
+                <div class="divLeft" style="margin-left: 72px;">
+                    <span class="required">*</span>
+                    <span class="spanFWCZ">有无重大事故</span>
                 </div>
-                <div id="divJQXDQYFText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                    <div id="divJQXDQYFSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                        <span id="spanJQXDQYF" class="spanFWQK spanFontColor" style="margin-top: 0">请选择到期月份</span>
-                        <div class="divFWQKArrow"></div>
+                <div class="divRight">
+                    <div class="div_radio" id="div_ywzdsg_y">
+                        <img class="iFWCZ" id="img_ywzdsg_y" /><label class="labelFWCZ">有</label>
                     </div>
-                    <div id="divJQXDQYF" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                    <div class="div_radio" id="div_ywzdsg_w">
+                        <img class="iFWCZ" id="img_ywzdsg_w" /><label class="labelFWCZ">无</label>
                     </div>
                 </div>
             </div>
-        </div>
+            <div id="divNJDQ" class="divFWCZ" style="z-index: 995;">
+                <div class="divLeft" style="margin-left: 101px;">
+                    <span class="required">*</span>
+                    <span class="spanFWCZ">年检到期</span>
+                </div>
+                <div class="divRight">
+                    <div id="divNJDQNFText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                        <div id="divNJDQNFSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanNJDQNF" class="spanFWQK spanFontColor" style="margin-top: 0">请选择到期年份</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divNJDQNF" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                    <div id="divNJDQYFText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                        <div id="divNJDQYFSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanNJDQYF" class="spanFWQK spanFontColor" style="margin-top: 0">请选择到期月份</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divNJDQYF" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="divJQXDQ" class="divFWCZ" style="z-index: 994;">
+                <div class="divLeft" style="margin-left: 86px;">
+                    <span class="required">*</span>
+                    <span class="spanFWCZ">交强险到期</span>
+                </div>
+                <div class="divRight">
+                    <div id="divJQXDQNFText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                        <div id="divJQXDQNFSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanJQXDQNF" class="spanFWQK spanFontColor" style="margin-top: 0">请选择到期年份</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divJQXDQNF" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                    <div id="divJQXDQYFText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                        <div id="divJQXDQYFSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanJQXDQYF" class="spanFWQK spanFontColor" style="margin-top: 0">请选择到期月份</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divJQXDQYF" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div id="divSYXDQ" class="divFWCZ" style="z-index: 993;">
                 <div class="divLeft" style="margin-left: 86px;">
                     <span class="required">*</span>
