--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_MTC/CL_MTC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_MTC/CL_MTC.cshtml
@@ -87,8 +87,12 @@
                     <span class="spanFWCZ">身份</span>
                 </div>
                 <div class="divRight">
-                    <img class="iFWCZ" id="imgGRZR" /><label class="labelFWCZ">&nbsp;&nbsp;个人转让</label>
-                    <img class="iFWCZ" id="imgSJZR" /><label class="labelFWCZ">&nbsp;&nbsp;商家转让&nbsp;&nbsp;</label>
+                    <div class="div_radio" id="div_sf_grzr">
+                        <img class="iFWCZ" id="img_sf_grzr" /><label class="labelFWCZ">个人转让</label>
+                    </div>
+                    <div class="div_radio" id="div_sf_sjzr">
+                        <img class="iFWCZ" id="img_sf_sjzr" /><label class="labelFWCZ">商家转让</label>
+                    </div>
                 </div>
             </div>
             <div id="divMTCLB" class="divFWCZ" style="z-index: 999">
@@ -129,8 +133,12 @@
                     <span class="spanFWCZ">行驶里程</span>
                 </div>
                 <div class="divRight">
-                    <img class="iFWCZ" id="imgXCWXS" /><label class="labelFWCZ">&nbsp;&nbsp;新车未行使</label>
-                    <img class="iFWCZ" id="imgYXS" /><label class="labelFWCZ">&nbsp;&nbsp;已行使&nbsp;&nbsp;</label>
+                    <div class="div_radio" id="div_xslc_xcwxs">
+                        <img class="iFWCZ" id="img_xslc_xcwxs" /><label class="labelFWCZ">新车未行使</label>
+                    </div>
+                    <div class="div_radio" id="div_xslc_yxs">
+                        <img class="iFWCZ" id="img_xslc_yxs" /><label class="labelFWCZ">已行使</label>
+                    </div>
                 </div>
             </div>
             <div id="divGLS" class="divFWCZ" style="z-index: 996; display: none;">
@@ -168,8 +176,8 @@
                     <span class="spanFWCZ">转让价格</span>
                 </div>
                 <div class="divRight">
-                    <span id="spanJG" class="spanFWLX SRK" style="display: inline-block;">
-                        <input class="inputLCFB spanFontColor" id="JG" maxlength="9" column="JG" type="text" style="width: 100px" />
+                    <span id="spanJG" class="spanFWLX SRK" style="display: inline-block; width: 150px;">
+                        <input class="inputLCFB spanFontColor" id="JG" maxlength="9" column="JG" type="text" style="width: 120px" />
                         <span class="spanFontColor">元</span>
                     </span>
                 </div>
