--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_JC/CL_JC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_JC/CL_JC.cshtml
@@ -174,12 +174,12 @@
                 </div>
                 <div class="divRight">
                     <div class="div_radio" id="div_sfdqby_s">
-                        <img class="iFWCZ" id="img_sfdqby_s" /><label class="labelFWCZ">&nbsp;&nbsp;是</label>
+                        <img class="iFWCZ" id="img_sfdqby_s" /><label class="labelFWCZ">是</label>
                     </div>
                     <div class="div_radio" id="div_sfdqby_f">
-                        <img class="iFWCZ" id="img_sfdqby_f" /><label class="labelFWCZ">&nbsp;&nbsp;否&nbsp;&nbsp;</label>
+                        <img class="iFWCZ" id="img_sfdqby_f" /><label class="labelFWCZ">否</label>
                     </div>
-                        </div>
+                </div>
             </div>
             <div id="divPZSZD" class="divFWCZ" style="z-index: 994;">
                 <div class="divLeft" style="margin-left: 87px;">
@@ -189,7 +189,7 @@
                 <div class="divRight">
                     <div id="divPZSZSFText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
                         <div id="divPZSZSFSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="SPSF"/>
+                            <input type="hidden" id="SPSF" />
                             <span id="spanPZSZSF" class="spanFWQK spanFontColor" style="margin-top: 0">请选择上牌省份</span>
                             <div class="divFWQKArrow"></div>
                         </div>
